force-app/main/default/objects/DeepSeek_Credentials__c/DeepSeek_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Protected custom settings for storing DeepSeek API credentials and configuration. DeepSeek-R1 is hosted on Azure AI and provides advanced reasoning capabilities.</description>
    <label>DeepSeek Credentials</label>
</CustomObject>