force-app/main/default/objects/DeepSeek_Credentials__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>DeepSeek API endpoint URL (Azure AI endpoint)</description>
    <inlineHelpText>Full DeepSeek API endpoint URL. Example: https://saura-m51w47qu-eastus2.services.ai.azure.com/openai/v1/chat/completions</inlineHelpText>
    <label>API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>