force-app/main/default/objects/DeepSeek_Credentials__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>DeepSeek API key for authentication</description>
    <inlineHelpText>API key for DeepSeek authentication. Keep this secure and do not share.</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>