force-app/main/default/objects/DeepSeek_Credentials__c/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <defaultValue>4096</defaultValue>
    <description>Maximum number of tokens to generate in responses</description>
    <inlineHelpText>Maximum tokens for DeepSeek responses. Default: 4096. Higher values allow longer responses but cost more.</inlineHelpText>
    <label>Max Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>