force-app/main/default/objects/DeepSeek_Credentials__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>DeepSeek model name to use (e.g., DeepSeek-R1)</description>
    <inlineHelpText>Model name for DeepSeek. Example: DeepSeek-R1</inlineHelpText>
    <label>Model Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>