force-app/main/default/objects/DeepSeek_Credentials__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>0.7</defaultValue>
    <description>Temperature setting for response variability (0-1)</description>
    <inlineHelpText>Controls randomness. 0 = focused/deterministic, 1 = creative/random. Default: 0.7</inlineHelpText>
    <label>Temperature</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>